; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/macos/local/extr_44234.c_try_necp_leak.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/macos/local/extr_44234.c_try_necp_leak.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.map_address_racer_context = type { i32, i32, i64*, i32 }

@SYSPROTO_CONTROL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"Did not allocate in time\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.map_address_racer_context*)* @try_necp_leak to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @try_necp_leak(i32 %0, %struct.map_address_racer_context* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.map_address_racer_context*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64*, align 8
  store i32 %0, i32* %4, align 4
  store %struct.map_address_racer_context* %1, %struct.map_address_racer_context** %5, align 8
  %9 = load %struct.map_address_racer_context*, %struct.map_address_racer_context** %5, align 8
  %10 = getelementptr inbounds %struct.map_address_racer_context, %struct.map_address_racer_context* %9, i32 0, i32 3
  %11 = load i32, i32* %10, align 8
  store i32 %11, i32* %6, align 4
  br label %12

12:                                               ; preds = %18, %2
  %13 = load %struct.map_address_racer_context*, %struct.map_address_racer_context** %5, align 8
  %14 = getelementptr inbounds %struct.map_address_racer_context, %struct.map_address_racer_context* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = icmp ne i32 %15, 0
  %17 = xor i1 %16, true
  br i1 %17, label %18, label %19

18:                                               ; preds = %12
  br label %12

19:                                               ; preds = %12
  %20 = load %struct.map_address_racer_context*, %struct.map_address_racer_context** %5, align 8
  %21 = getelementptr inbounds %struct.map_address_racer_context, %struct.map_address_racer_context* %20, i32 0, i32 0
  store i32 0, i32* %21, align 8
  %22 = load %struct.map_address_racer_context*, %struct.map_address_racer_context** %5, align 8
  %23 = getelementptr inbounds %struct.map_address_racer_context, %struct.map_address_racer_context* %22, i32 0, i32 1
  store i32 1, i32* %23, align 4
  %24 = load i32, i32* %4, align 4
  %25 = load i32, i32* @SYSPROTO_CONTROL, align 4
  %26 = load %struct.map_address_racer_context*, %struct.map_address_racer_context** %5, align 8
  %27 = getelementptr inbounds %struct.map_address_racer_context, %struct.map_address_racer_context* %26, i32 0, i32 2
  %28 = load i64*, i64** %27, align 8
  %29 = call i32 @getsockopt(i32 %24, i32 %25, i32 0, i64* %28, i32* %6)
  store i32 %29, i32* %7, align 4
  %30 = load i32, i32* %7, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %34

32:                                               ; preds = %19
  %33 = call i32 @DEBUG_TRACE(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %3, align 4
  br label %49

34:                                               ; preds = %19
  %35 = load %struct.map_address_racer_context*, %struct.map_address_racer_context** %5, align 8
  %36 = getelementptr inbounds %struct.map_address_racer_context, %struct.map_address_racer_context* %35, i32 0, i32 2
  %37 = load i64*, i64** %36, align 8
  store i64* %37, i64** %8, align 8
  %38 = load i64*, i64** %8, align 8
  %39 = getelementptr inbounds i64, i64* %38, i64 0
  %40 = load i64, i64* %39, align 8
  %41 = icmp eq i64 %40, 0
  br i1 %41, label %42, label %48

42:                                               ; preds = %34
  %43 = load i64*, i64** %8, align 8
  %44 = getelementptr inbounds i64, i64* %43, i64 1
  %45 = load i64, i64* %44, align 8
  %46 = icmp eq i64 %45, 0
  br i1 %46, label %47, label %48

47:                                               ; preds = %42
  store i32 0, i32* %3, align 4
  br label %49

48:                                               ; preds = %42, %34
  store i32 1, i32* %3, align 4
  br label %49

49:                                               ; preds = %48, %47, %32
  %50 = load i32, i32* %3, align 4
  ret i32 %50
}

declare dso_local i32 @getsockopt(i32, i32, i32, i64*, i32*) #1

declare dso_local i32 @DEBUG_TRACE(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
